# telegram_bot_kk

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/: settings.local.json
docs/: game_knowledge_service.md  litellm-proxy-setup.md
src/: __init__.py  exceptions.py  main.py
src/config/: settings.py
src/filters/: __init__.py  base.py  chat_filters.py
src/knowledge/: init_database.py
src/middlewares/: message_history_middleware.py  topic_update_middleware.py
src/models/: __init__.py  ai_config.py  analysis.py  base_document.py  base_topic_storage.py  game_knowledge.py  game_knowledge_chromadb.py  message.py  message_history.py
src/providers/: __init__.py  gemini_provider.py  groq_provider.py  universal_provider.py
src/routers/: admin.py  inline.py  message_handlers.py  private.py
src/services/: ai_client.py  chat_manager.py  chroma_crud.py  chroma_message_storage.py  game_knowledge_service.py  group_tracker.py  knowledge_crud_chromadb.py  knowledge_crud_service.py  memory_topic_storage.py  message_history_storage.py  model_pool_manager.py  response_manager.py
src/services/ai/: __init__.py  ai_client.py  ai_provider.py  base_ai_client.py  base_provider.py  model_pool_manager.py  protocols.py  provider_adapter.py  provider_factory.py
src/states/: __init__.py
src/utils/: gemini_client.py  gemini_client_deprecated.py  groq_client.py  groq_client_deprecated.py  group_selection.py  litellm_client.py  logger.py
tests/: test_model_pool.py
